[gd_scene load_steps=3 format=3 uid="uid://dv1y0kgmrqt2w"]

[ext_resource type="Script" uid="uid://c1820f3jcp43a" path="res://scripts/resource_button.gd" id="1_ntuxg"]
[ext_resource type="PackedScene" uid="uid://bieaumgqbd8md" path="res://sprites/yao_item.tscn" id="2_3mdbq"]

[node name="ResourceButton" type="TextureButton"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ntuxg")
sprite_to_spawn = ExtResource("2_3mdbq")

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
